tests/NormalTests/paczka1/fuzzy1/17560554.err
Error in line 10: ERSLdHeF4Ha A336 34,8
Error in line 13: hNuntx0R A336 68,9
Error in line 14: TyMAI3 S43 86,6
Error in line 30: U72Hz S418 845,0
Error in line 35: U72Hz S43 60,7
